# mio-extras

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
src/: channel.rs  lib.rs  timer.rs
test/: mod.rs  test_poll_channel.rs  test_timer.rs
