[package]
name          = "mio-extras"
version       = "2.0.6"
license       = "MIT OR Apache-2.0"
authors       = ["Carl Lerche <me@carllerche.com>", "David Hotham"]
description   = "Extra components for use with Mio"
documentation = "https://docs.rs/mio-extras"
repository    = "https://github.com/dimbleby/mio-extras"
readme        = "README.md"
keywords      = ["io", "async", "non-blocking"]
categories    = ["asynchronous"]
exclude       = [".gitignore"]
edition       = "2018"

[dependencies]
mio = "0.6.14"
log = "0.4"
lazycell = "1"
slab = "0.4"

[[test]]
name = "test"
path = "test/mod.rs"
